--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 	<title>Shervin Firouzdehghan</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:300,400,500&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Old+Standard+TT&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="shervinfStyle.css">
+	<link rel="stylesheet" type="text/css" href="elements.css">
 </head>
 <body>
 
@@ -28,10 +29,10 @@
 		    </ul>
 		    <ul class="navbar-nav ml-auto">
 		    	<li class="nav-item active">
-		        <a id="softwareRight" class="nav-link" href="#">Software <span class="sr-only">(current)</span></a>
+		        <a id="softwareRight" class="nav-link mr-4" href="#">Software</a>
 		      </li>
 		    	<li class="nav-item active">
-		        <a  id="contactMeRight" class="nav-link nav border rounded px-3 mr-4" href="#" tabindex="-1">Contact Me</a>
+		        <a  id="contactMeRight" class="nav-link nav border border-white px-3 mr-4" href="#" tabindex="-1">Contact Me</a>
 		      </li>
 		    </ul>
 		  </div>
@@ -39,17 +40,17 @@
 
 <!-- </div> -->
 
-	<div class="container">
+	<!-- <div class="container">
 		<div class="row">
 			<div class="col-lg-12">
 				<div id="content">
 				<h1>Shervin Firouzdehghan</h1>
-				<!-- <hr> -->
+				 <hr>
 				<h3>Computer Engineer In Progress</h3>
-				<!-- <button class="btn btn-light btn-md">Get To Know Me!</button> -->
+				<button class="btn btn-light btn-md">Get To Know Me!</button>
 				</div>
 			</div>
-		</div>
+		</div> -->
 	</div>
 
 
