--- a/index.html
+++ b/index.html
@@ -12,45 +12,36 @@
 </head>
 <body>
 
-
-		<nav class="navbar navbar-expand-lg navbar-dark bg-transparent  mt-4">
-		  <a class="navbar-brand ml-4" href="#">Shervin<!-- br id="nameBreak"> --> Firouzdehghan</a>
+	<div>
+		<nav class="navbar navbar-expand-md navbar-light bg-light  p-2 px-4">
+		  <a class="navbar-brand" href="#">Shervin Firouzdehghan</a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		  </button>
 
-		<!-- <div class="container"> -->
 		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 		    <ul class="navbar-nav mr-auto">
-		      
-		      <!-- <li class="nav-item">
-		        <a class="nav-link" href="#">About</a>
-		      </li> -->
 		    </ul>
 		    <ul class="navbar-nav ml-auto">
-		    	<li class="nav-item active">
-		        <a id="softwareRight" class="nav-link mr-4" href="#">Software</a>
-		      </li>
-		    	<li class="nav-item active">
-		        <a  id="contactMeRight" class="nav-link nav border border-white px-3 mr-4" href="#" tabindex="-1">Contact Me</a>
-		      </li>
+					<li class="nav-item ">
+							<a class="nav-link active" href="#">Software</a>
+						  </li>
+		    	<li class="nav-item pl-4">
+					<a class="nav-link active border border-dark px-4 mr-2" href="#">Contact</a>
+				  </li>
 		    </ul>
 		  </div>
 		</nav>
-
-<!-- </div> -->
-
-	<!-- <div class="container">
+	</div>
+	<div>
 		<div class="row">
 			<div class="col-lg-12">
 				<div id="content">
 				<h1>Shervin Firouzdehghan</h1>
-				 <hr>
 				<h3>Computer Engineer In Progress</h3>
-				<button class="btn btn-light btn-md">Get To Know Me!</button>
 				</div>
 			</div>
-		</div> -->
+		</div>
 	</div>
 
 
