--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <div class="col-lg-4 ">
                       <div class="div-img-bg">
                         <div class="about-img">
-                          <img src="images/profileMe.jpg" class="img-responsive" alt="me">
+                          <img src="images/myProfile.jpg" class="img-responsive" alt="shervin firouzdehghan picture">
                         </div>
                       </div>
                     </div>
