--- a/index.html
+++ b/index.html
@@ -20,20 +20,18 @@
     <body>
 		<!-- Navigation bar starts -->
         <div id="main-nav">
-            <nav class="navbar fixed-top navbar navbar-expand-md navbar-light bg-light  pt-3 p-2 px-4">
+            <nav class="navbar fixed-top navbar navbar-expand-md navbar-light bg-light  pt-3 px-4">
               <a class="navbar-brand" href="#">Shervin Firouzdehghan</a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
     
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto"></ul>
-                    <ul class="navbar-nav ml-auto">
-                            <li class="nav-item "><a class="nav-link active" href="#about">About</a></li>
-                        <li class="nav-item "><a class="nav-link active pl-4" href="#">Software</a></li>
-                        <li class="nav-item pl-4"><a class="nav-link active border border-dark px-4 mr-2" href="#">Contact</a></li>
-                        
-                    </ul>
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item "><a class="nav-link active px-4" href="#about">About</a></li>
+                    <li class="nav-item "><a class="nav-link active px-4" href="#softwre">Software</a></li>
+                    <li class="nav-item"><a class="nav-link active border border-dark px-4" href="#contact">Contact</a></li>
+                </ul>
               </div>
             </nav>
 		</div>
@@ -42,6 +40,7 @@
 
         <!-- The social media icon bar -->
         <div class="icon-bar">
+                <a href="https://github.com/shervinf1" class="github"><i class="fa fa-github"></i></a> 
                 <a href="https://linkedin.com/in/shervinf" class="linkedin"><i class="fa fa-linkedin"></i></a>
                 <a href="https://www.instagram.com/shervf/" class="instagram"><i class="fa fa-instagram"></i></a>
                 <a href="https://twitter.com/shervf" class="twitter"><i class="fa fa-twitter"></i></a> 
@@ -54,7 +53,7 @@
 		<!-- Header Section Begins -->
         <div id="header">
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-md-12">
                 </div>
             </div>
         </div>
