--- a/index.html
+++ b/index.html
@@ -87,38 +87,38 @@
               <div id="skills">
                 <div class="container">
               <!-- Service carousel begins -->
-              <!-- <div id="skills-block" class="carousel slide" data-ride="carousel"> -->
+              <div id="skills-block" class="carousel slide" data-ride="carousel">
 
                 <!-- Indicators -->
                 <ul class="carousel-indicators">
-                  <li data-target="#skills" data-slide-to="0" class="active"></li>
-                  <li data-target="#skills" data-slide-to="1"></li>
-                  <li data-target="#skills" data-slide-to="2"></li>
+                  <li data-target="#skills-block" data-slide-to="0" class="active"></li>
+                  <li data-target="#skills-block" data-slide-to="1"></li>
+                  <li data-target="#skills-block" data-slide-to="2"></li>
                 </ul>
               
                 <!-- The slideshow -->
                 <div class="carousel-inner">
-                  <div class="carousel-item active">
+                  <div class="carousel-item active carouselPaddsection">
                       <i class="fab fa-html5"></i>
                       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut, odio! </p>
                   </div>
-                  <div class="carousel-item">
+                  <div class="carousel-item carouselPaddsection">
                       <i class="fab fa-css3"></i>
                       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut, odio! </p>
                   </div>
-                  <div class="carousel-item">
+                  <div class="carousel-item carouselPaddsection">
                       <i class="fab fa-java"></i>
                       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut, odio! </p>
                   </div>
-                  <div class="carousel-item">
+                  <div class="carousel-item carouselPaddsection">
                       <i class="fab fa-js"></i>
                       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut, odio! </p>
                   </div>
-                  <div class="carousel-item">
+                  <div class="carousel-item carouselPaddsection">
                       <i class="fab fa-android"></i>
                       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut, odio! </p>
                   </div>
-                  <div class="carousel-item">
+                  <div class="carousel-item carouselPaddsection">
                       <i class="fab fa-html5"></i>
                       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut, odio! </p>
 
@@ -126,14 +126,14 @@
                 </div>
               
                 <!-- Left and right controls -->
-                <a class="carousel-control-prev" href="#skills" data-slide="prev">
+                <a class="carousel-control-prev " href="#skills-block" data-slide="prev">
                   <span class="carousel-control-prev-icon"></span>
                 </a>
-                <a class="carousel-control-next" href="#skills" data-slide="next">
+                <a class="carousel-control-next" href="#skills-block" data-slide="next">
                   <span class="carousel-control-next-icon"></span>
                 </a>
                 </div>
-              <!-- </div> -->
+              </div>
             </div>
               <!-- Service Carouse ends -->
 
