--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="jumbotron jumbotron-fluid vertical-center mb-0">
                 <div class="container text-center">
                     <div class="typewriter">
-                        <h1 id="headerText" class="display-4">Hey, I'm Shervin</h1>
+                        <h1 id="headerText" class="">Hey, I'm Shervin</h1>
                         <hr>
                         <p id="bottomHeaderText" class="lead">Future Computer Engineer</p>
                     </div>
