--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Shervin Firouzdehghan</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
@@ -14,36 +14,38 @@
         <script src="script.js"></script>
     </head>
     <body>
-        <!-- Navigation bar starts -->
-        <!-- Side navigation -->
+        <!-- Navigation bar begins -->
         <nav id="menu" class="navbar fixed-top navbar navbar-expand-md navbar-light bg-light">
-                <a class="navbar-brand" href="#">Shervin Firouzdehghan</a>
+            <a class="navbar-brand" href="#">Shervin Firouzdehghan</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon"></span>
                 </button>
       
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                  <ul class="nav ml-auto">
-                      <li class="nav-item active">
-                        <a class="nav-link" href="#about">About</a>
-                      </li>
-                      <li class="nav-item active">
-                        <a class="nav-link" href="#software">Software</a>
-                      </li>
-                      <li class="nav-item active">
-                        <a class="nav-link border border-dark" href="#contact">Contact</a>
-                      </li>
-                  </ul>
-                </div>
-              </nav>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                <ul class="navbar-nav text-center">
+                    <li class="nav-item">
+                    <a class="nav-link px-3" href="#about">About</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link px-3" href="#software">Software</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link border border-dark px-3" href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <!-- Navigation bar begins -->
 
-        <!--social media icon bar -->
+        <!--social media icon bar begins -->
         <div class="icon-bar">
             <a href="https://github.com/shervinf1" class="icon"><i class="fab fa-github"></i></a> 
             <a href="https://www.linkedin.com/in/shervinf/" class="icon"><i class="fab fa-linkedin"></i></a> 
             <a href="https://www.instagram.com/shervf/" class="icon"><i class="fab fa-instagram"></i></a> 
             <a href="https://twitter.com/shervf" class="icon"><i class="fab fa-twitter"></i></a>
         </div>
+        <!--social media icon bar ends -->
+
         <!-- Header Begins -->
        <section id="header">
             <div class="jumbotron jumbotron-fluid vertical-center mb-0">
@@ -56,6 +58,8 @@
                 </div>
             </div>
        </section>
+       <!-- Header ends -->
+
        <!-- Profile section begins -->
        <section id="about">
             <div class="row text-center align-items-center">
@@ -65,18 +69,22 @@
                             <img id="profilePicture" src="images/me.jpg" alt="">
                             <h2 class="mt-5">Shervin Firouzdehghan</h2>
                             <br>
-                            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit optio quaerat ea voluptatem ipsa laudantium dolor molestiae, eos fugiat explicabo deserunt reiciendis ex sunt aspernatur repellendus recusandae voluptatum architecto reprehenderit eveniet rem sed dolorum. Corporis, eaque. Doloremque vero quasi a fuga magni consectetur placeat harum commodi maiores minus sapiente vitae provident, facere necessitatibus voluptates natus impedit itaque distinctio suscipit quae quia. Quia sapiente nesciunt excepturi. Fugit atque sit voluptas exercitationem beatae id, sed dolor quisquam.</p>
+                            <p class="lead">I am a computer engineering undergraduate student at Universidad Ana G. Mendez
+                             in Gurabo, mainly focused on learning about programming in and out of the classroom, whether 
+                             it's about mobile and web development or all the way up to cyber security and ethical hacking. 
+                             I love structure and order and making sure everything is well put together when it comes to writing code.
+                            Also I'm a fan of working in teams seeing as two heads are better than one.</p>
                         </div>
                     </div>
                 </div> 
 
-                <div id="aboutBg" class="justify-content-center vertical-center col-md-6 order-first order-md-2">
+                <div id="BG" class="justify-content-center vertical-center col-md-6 order-first order-md-2">
                     <h2 class="display-2">Profile</h2>
                 </div>
             </div>
 
             <div class="row text-center align-items-center">
-                <div id="aboutBg" class="justify-content-center vertical-center col-md-6">
+                <div id="BG" class="justify-content-center vertical-center col-md-6">
                     <h2 class="display-2">Education</h2>
                 </div> 
 
@@ -102,12 +110,12 @@
                         </div>
                     </div> 
 
-                    <div id="aboutBg" class="justify-content-center vertical-center col-md-6 order-first order-md-2">
+                    <div id="BG" class="justify-content-center vertical-center col-md-6 order-first order-md-2">
                         <h2 class="display-2">Work</h2>
                     </div>
                 </div>
         </section>
-
+        <!-- Profile section ends -->
 
         
 
@@ -117,18 +125,5 @@
        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-       <script type="text/javascript">
-        (function($) {          
-            $(document).ready(function(){                    
-                $(window).scroll(function(){                          
-                    if ($(this).scrollTop() > 200) {
-                        $('#menu').fadeIn(500);
-                    } else {
-                        $('#menu').fadeOut(500);
-                    }
-                });
-            });
-        })(jQuery);
-        </script>
     </body>
 </html>
