--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE h tml>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -6,9 +6,8 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
-        <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:300,400,500&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400&display=swap" rel="stylesheet">
         <link href="http://fonts.googleapis.com/css?family=Dancing+Script:700|EB+Garamond" rel="stylesheet" type="text/css" />
-        <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:100,300,400&display=swap" rel="stylesheet">        
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="elements.css">
         <script src="script.js"></script>
@@ -91,9 +90,25 @@
                 <div class="col-md-6 text-center">
                     <div class="row justify-content-center">
                         <div class="col-10 col-lg-8 sideContent py-5">
-                            <h2>Education</h2>
-                            <br>
-                            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit optio quaerat ea voluptatem ipsa laudantium dolor molestiae, eos fugiat explicabo deserunt reiciendis ex sunt aspernatur repellendus recusandae voluptatum architecto reprehenderit eveniet rem sed dolorum. Corporis, eaque. Doloremque vero quasi a fuga magni consectetur placeat harum commodi maiores minus sapiente vitae provident, facere necessitatibus voluptates natus impedit itaque distinctio suscipit quae quia. Quia sapiente nesciunt excepturi. Fugit atque sit voluptas exercitationem beatae id, sed dolor quisquam.</p>
+                            <div class="text-left">
+                                <h4><strong>Universidad Ana G. Mendez</strong></h4>
+                                <h4>Aug 2016 - Present</h4>
+                                <h5>3.44 GPA</h5>
+                                <p class="lead">Absolutley love my experience so far with programming. I've learned 
+                                    about Data Structures and Algorithms using languages such as C++ and Java 
+                                    and also learned about the in's and out's of Operating Systems 
+                                    such as windows and linux though my courses. Also currently the Vice-President of
+                                    the Computer Engineering Assosiation of UAGM.
+                                </p>
+                                <h4><strong>Thomas Alva Edison High School</strong></h4>
+                                <h4>June 2016</h4>
+                                <h5>Graduated with 3.54 GPA</h5>
+                                <p class="lead">During my time in in TAES I participated in many non profit organization
+                                    such as Together Club which is a branch of the American Red Cross and during my time with
+                                    the together club we organized and ran many events to help people in need. Whether it was a fundraiser
+                                    for the homeless or the American Cancer Society we helped out in anyway we could.
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
