--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Shervin Firouzdehghan</title>
-        <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
         <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400&display=swap" rel="stylesheet">
@@ -15,21 +14,21 @@
     <body>
         <!-- Navigation bar begins -->
         <nav id="menu" class="navbar fixed-top navbar navbar-expand-md navbar-light bg-light">
-            <a class="navbar-brand" href="#">Shervin Firouzdehghan</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+            <a class="navbar-brand" href="#header">Shervin Firouzdehghan</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
       
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav text-center">
                     <li class="nav-item">
-                    <a class="nav-link px-3" href="#about">About</a>
+                        <a class="nav-link px-3 active" href="#profile">About</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link px-3" href="#software">Software</a>
+                        <a class="nav-link px-3 active" href="#">Software</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link border border-dark px-3" href="#contact">Contact</a>
+                        <a class="nav-link border border-dark px-3 active" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -61,76 +60,103 @@
 
        <!-- Profile section begins -->
        <section id="about">
-            <div class="row text-center align-items-center">
-                <div class="col-md-6 text-center">
-                    <div class="row justify-content-center">
-                        <div class="col-10 col-lg-8 sideContent mb-md-0 py-5">
-                            <img id="profilePicture" src="images/me.jpg" alt="">
-                            <h2 class="mt-5">Shervin Firouzdehghan</h2>
-                            <br>
-                            <p class="lead">I am a computer engineering undergraduate student at Universidad Ana G. Mendez
-                             in Gurabo, mainly focused on learning about programming in and out of the classroom, whether 
-                             it's about mobile and web development or all the way up to cyber security and ethical hacking. 
-                             I love structure and order and making sure everything is well put together when it comes to writing code.
-                            Also I'm a fan of working in teams seeing as two heads are better than one.</p>
-                        </div>
-                    </div>
-                </div> 
-
-                <div id="BG" class="justify-content-center vertical-center col-md-6 order-first order-md-2">
-                    <h2 class="display-2">Profile</h2>
-                </div>
-            </div>
-
-            <div class="row text-center align-items-center">
-                <div id="BG" class="justify-content-center vertical-center col-md-6">
-                    <h2 class="display-2">Education</h2>
-                </div> 
-
-                <div class="col-md-6 text-center">
-                    <div class="row justify-content-center">
-                        <div class="col-10 col-lg-8 sideContent py-5">
-                            <div class="text-left">
-                                <h4><strong>Universidad Ana G. Mendez</strong></h4>
-                                <h4>Aug 2016 - Present</h4>
-                                <h5>3.44 GPA</h5>
-                                <p class="lead">Absolutley love my experience so far with programming. I've learned 
-                                    about Data Structures and Algorithms using languages such as C++ and Java 
-                                    and also learned about the in's and out's of Operating Systems 
-                                    such as windows and linux though my courses. Also currently the Vice-President of
-                                    the Computer Engineering Assosiation of UAGM.
-                                </p>
-                                <h4><strong>Thomas Alva Edison High School</strong></h4>
-                                <h4>June 2016</h4>
-                                <h5>Graduated with 3.54 GPA</h5>
-                                <p class="lead">During my time in in TAES I participated in many non profit organization
-                                    such as Together Club which is a branch of the American Red Cross and during my time with
-                                    the together club we organized and ran many events to help people in need. Whether it was a fundraiser
-                                    for the homeless or the American Cancer Society we helped out in anyway we could.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row text-center align-items-center">
+           <section id="profile">
+                <div class="row text-center align-items-center">
                     <div class="col-md-6 text-center">
                         <div class="row justify-content-center">
-                            <div class="col-10 col-lg-8 sideContent mb-md-0 py-5 ">
-                                <h2>Work</h2>
+                            <div class="col-10 col-lg-8 sideContent mb-md-0 py-5">
+                                <img id="profilePicture" src="images/me.jpg" alt="">
+                                <h2 class="mt-5">Shervin Firouzdehghan</h2>
                                 <br>
-                                <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit optio quaerat ea voluptatem ipsa laudantium dolor molestiae, eos fugiat explicabo deserunt reiciendis ex sunt aspernatur repellendus recusandae voluptatum architecto reprehenderit eveniet rem sed dolorum. Corporis, eaque. Doloremque vero quasi a fuga magni consectetur placeat harum commodi maiores minus sapiente vitae provident, facere necessitatibus voluptates natus impedit itaque distinctio suscipit quae quia. Quia sapiente nesciunt excepturi. Fugit atque sit voluptas exercitationem beatae id, sed dolor quisquam.</p>
+                                <p class="lead">I am a computer engineering undergraduate student at Universidad Ana G. Mendez
+                                    in Gurabo, mainly focused on learning about programming in and out of the classroom, whether 
+                                    it's about mobile and web development or all the way up to cyber security and ethical hacking. 
+                                    I love structure and order and making sure everything is well put together when it comes to writing code.
+                                    Also I'm a fan of working in teams seeing as two heads are better than one.
+                                </p>
                             </div>
                         </div>
                     </div> 
-
                     <div id="BG" class="justify-content-center vertical-center col-md-6 order-first order-md-2">
-                        <h2 class="display-2">Work</h2>
+                        <h2 class="display-2">Profile</h2>
                     </div>
                 </div>
+            </section>
+            <!-- Profile Sectiion ends -->
+
+            <!-- Education Sectiion begins -->
+            <section id="education">
+                <div class="row text-center align-items-center">
+                    <div id="BG" class="justify-content-center vertical-center col-md-6">
+                        <h2 class="display-2">Education</h2>
+                    </div> 
+                    <div class="col-md-6 text-center">
+                        <div class="row justify-content-center">
+                            <div class="col-10 col-lg-8 sideContent py-5">
+                                <div class="text-left">
+                                    <h3 id="schoolName">Universidad Ana G. Méndez</h3>
+                                    <h4>Aug 2016 - Present</h4>
+                                    <h5>3.44 GPA</h5>
+                                    <p class="lead">Absolutley love my experience so far with programming. I've learned 
+                                        about Data Structures and Algorithms using languages such as C++ and Java 
+                                        and also learned about the in's and out's of Operating Systems 
+                                        such as windows and linux though my courses. Also currently the Vice-President of
+                                        the Computer Engineering Assosiation of UAGM.
+                                    </p>
+                                    <br>
+                                    <h3 id="schoolName">Thomas Alva Edison High School</h3>
+                                    <h4> Graduated June 2016</h4>
+                                    <h5>Graduated with 3.54 GPA</h5>
+                                    <p class="lead">During my time in in TAES I participated in many non profit organization
+                                        such as Together Club which is a branch of the American Red Cross and during my time with
+                                        the together club we organized and ran many events to help people in need. Whether it was a fundraiser
+                                        for the homeless or the American Cancer Society we helped out in anyway we could.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- Education Sectiion ends -->
+
+            <!-- Work Sectiion begins -->
+            <section id="work">
+                <div class="row text-center align-items-center">
+                    <div class="col-md-6 text-center">
+                        <div class="row justify-content-center">
+                            <div class="col-10 col-lg-8 sideContent mb-md-0 py-5 ">
+                                <div class="text-left">
+                                        <h3>Universidad Ana G. Méndez</h3>
+                                        <h4>Vice-President</h4>
+                                        <h5>Aug 2018 - Present</h5>
+                                        <p class="lead">I am the Vice-President of Hack UAGM, which is a non-profit computer engineering organization in UAGM that 
+                                            is focused on bringing certain tools to fellow collegues that may need to further their
+                                            knowledge in the field pertaining to computer science and engineering. We do so by providing
+                                            programming workshops, hackathons and company tours realted to the field.
+
+                                        </p>
+                                        <br>
+                                        <h3>Universidad Ana G. Méndez</h3>
+                                        <h4>Electrical Networks Tutor</h4>
+                                        <h5>Feb 2019 - Present</h5>
+                                        <p class="lead">As an Electrical Networks tutor, I help fellow students with topics
+                                            such as KCL/KVL, Thevenin and Norton Theorems, mesh analysis, nodal analysis and other 
+                                            topics related to circuits and electrical networks.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div> 
+                        <div id="BG" class="justify-content-center vertical-center col-md-6 order-first order-md-2">
+                            <h2 class="display-2">Work</h2>
+                        </div>
+                    </div>
+            </section>
+            <!-- Education Sectiion ends -->
+
         </section>
-        <!-- Profile section ends -->
+        <!-- About section ends -->
 
         
 
