--- a/index.html
+++ b/index.html
@@ -178,18 +178,28 @@
                                             <tbody>
                                                 <tr>
                                                     <td><a href="https://github.com/shervinf1/shervinf1.github.io">Personal Website</a></td>
-                                                    <td>Lorem ipsum dolor sit amet.</td>
+                                                    <td>This portfolio</td>
                                                     <td>HTML</td>
                                                 </tr>
                                                 <tr>
-                                                    <td><a href="https://github.com/shervinf1/Library">Trivial Library Database</a></td>
-                                                    <td>Lorem ipsum dolor sit amet.</td>
+                                                    <td><a href="https://github.com/shervinf1/Library">Library Database</a></td>
+                                                    <td>Library database using data structures such as binary search trees, circular doubly linked list and singly linked lists.</td>
                                                     <td>Java</td>
                                                 </tr>
                                                 <tr>
                                                     <td><a href="https://github.com/shervinf1/CourseScheduler">Course Scheduler</a></td>
-                                                    <td>Lorem ipsum dolor sit amet.</td>
+                                                    <td>Program with a GUI that will allow you to input your courses and display them in a weekly calender format</td>
                                                     <td>C++</td>
+                                                </tr>
+                                                <tr>
+                                                    <td><a href="https://github.com/shervinf1/FlashChat-Firebase-Android">FlashChat App</a></td>
+                                                    <td>WhatsApp clone for Android, using Firebase Authentication and SharedPreferences</td>
+                                                    <td>Java</td>
+                                                </tr>
+                                                <tr>
+                                                    <td><a href="https://github.com/shervinf1/Dicee">Dicee</a></td>
+                                                    <td>Android app that works as a random dice thrower</td>
+                                                    <td>Java</td>
                                                 </tr>
                                             </tbody>
                                     </table>
