Fixed mixup with software languages

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="jumbotron jumbotron-fluid vertical-center mb-0 parallax">
                 <div class="container text-center ">
                     <div class="typewriter">
-                        <h1 id="headerText" class="">Hey, I'm Shervin</h1>
+                        <h1 id="headerText">Hey, I'm Shervin</h1>
                         <hr>
                         <p id="bottomHeaderText" class="lead">Future Computer Engineer</p>
                     </div>
@@ -184,12 +184,12 @@
                                                 <tr>
                                                     <td><a href="https://github.com/shervinf1/Library">Library Database</a></td>
                                                     <td>Library database using data structures such as binary search trees, circular doubly linked list and singly linked lists.</td>
-                                                    <td>Java</td>
+                                                    <td>C++</td>
                                                 </tr>
                                                 <tr>
                                                     <td><a href="https://github.com/shervinf1/CourseScheduler">Course Scheduler</a></td>
                                                     <td>Program with a GUI that will allow you to input your courses and display them in a weekly calender format</td>
-                                                    <td>C++</td>
+                                                    <td>Java</td>
                                                 </tr>
                                                 <tr>
                                                     <td><a href="https://github.com/shervinf1/FlashChat-Firebase-Android">FlashChat App</a></td>
