--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         <!--social media icon bar begins -->
         <div class="icon-bar">
             <a href="https://github.com/shervinf1" class="icon"><i class="fab fa-github"></i></a> 
-            <a href="https://www.linkedin.com/in/shervinf/" class="icon"><i class="fab fa-linkedin"></i></a> 
+            <a href="https://www.linkedin.com/in/shervinf/" class="icon mt-0"><i class="fab fa-linkedin"></i></a> 
             <a href="https://www.instagram.com/shervf/" class="icon"><i class="fab fa-instagram"></i></a> 
-            <a href="https://twitter.com/shervf" class="icon"><i class="fab fa-twitter"></i></a>
+            <a href="https://twitter.com/shervf" class="icon mt-0"><i class="fab fa-twitter"></i></a>
         </div>
         <!--social media icon bar ends -->
 
