Fixed mistake in software url's

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                                                     <td>Java</td>
                                                 </tr>
                                                 <tr>
-                                                    <td><a href="https://github.com/shervinf1/Dicee"><u>FlashChat App</u></a></td>
+                                                    <td><a href="https://github.com/shervinf1/Dicee"><u>Dicee</u></a></td>
                                                     <td>Android app that works as a random dice thrower</td>
                                                     <td>Java</td>
                                                 </tr>
