updated profile img

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <div class="col-md-6 text-center">
                         <div class="row justify-content-center">
                             <div class="col-10 col-lg-8 sideContent mb-md-0 py-5">
-                                <img id="profilePicture" src="images/me.jpg" alt="">
+                                <img id="profilePicture" src="images/me.jpeg" alt="">
                                 <h2 id="myName" class="mt-5">Shervin Firouzdehghan</h2>
                                 <br>
                                 <p class="lead">I am a computer engineering undergraduate student at Universidad Ana G. Mendez
