--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                     <!-- <li class="nav-item"><a class="nav-link px-3 active" href="#profile">About</a> </li> -->
                     <li class="nav-item"> <a class="nav-link px-4 active" href="#software">Software</a> </li>
                     <li class="nav-item"> <a class="nav-link border border-dark px-4 active" href="#contact">Contact</a> </li>
+                    <li class="nav-item"> <a class="nav-link border border-dark px-4 active ml-2" href="login.html">Sign In</a> </li>
                 </ul>
             </div>
         </nav>
